--- a/resources/game.config
+++ b/resources/game.config
@@ -1,4 +1,8 @@
 {
   "game_title": "testcase c-0",
-  "initial_scene":"basic"
+  "initial_scene":"basic",
+  "server": {
+    "host": "34.82.57.67",
+    "port": 1234
+  }
 }
